syntax="proto3";

package proto;
import "Staff.proto";
option java_package = "generatedClasses";

message StaffRequest1{
  int32 staff_id = 1;

}

message StaffRequest{
  Staff staff = 1;
}
