syntax="proto3";

package proto;
option java_package = "generatedClasses";

message StatusResponse{
  string status=1;
}